# audio-transcription-pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py
scripts/: mp3-downloader.py  whisper.py
src/api/: __init__.py  models.py
src/database/: __init__.py  models.py
src/workers/: __init__.py  download_audio.py  generate_study_notes.py  translate_audio_to_text.py
